[gd_scene load_steps=18 format=3 uid="uid://chxn20nti102w"]

[ext_resource type="Script" path="res://Inimigos/m2_rei_boss_bullet.gd" id="1_dfr8k"]
[ext_resource type="Texture2D" uid="uid://do1dio4osjckb" path="res://Assets/inimigos/M2_rei_boss_snake_attack.png" id="2_xhjgn"]
[ext_resource type="Texture2D" uid="uid://2lcp51mraax5" path="res://Assets/inimigos/M2_rei_boss_snake_attack_frenzy.png" id="3_h1sd2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_26paa"]
atlas = ExtResource("2_xhjgn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okn2e"]
atlas = ExtResource("2_xhjgn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ugh"]
atlas = ExtResource("2_xhjgn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq8hk"]
atlas = ExtResource("3_h1sd2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68261"]
atlas = ExtResource("3_h1sd2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeo8u"]
atlas = ExtResource("3_h1sd2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kifn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26paa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okn2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ugh")
}],
"loop": true,
"name": &"snake_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq8hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68261")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeo8u")
}],
"loop": true,
"name": &"snake_attack_frenzy",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_cdj1c"]
offsets = PackedFloat32Array(0, 0.151685, 0.337079, 0.544944, 0.758427, 0.831461, 1)
colors = PackedColorArray(0.4791, 0.00146828, 0.674997, 1, 1, 0.87451, 0, 1, 0.478431, 0, 0.67451, 1, 0.478431, 0, 0.67451, 1, 1, 0.87451, 0, 1, 0.478431, 0, 0.67451, 1, 1, 0.87451, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jss3p"]
gradient = SubResource("Gradient_cdj1c")

[sub_resource type="Curve" id="Curve_s8t6r"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -200), 0.0, 0.0, 0, 0, Vector2(0.203883, -41.7582), 0.0, 0.0, 0, 0, Vector2(0.330097, 120.879), 0.0, 0.0, 0, 0, Vector2(0.558252, -37.3626), 0.0, 0.0, 0, 0, Vector2(0.563107, 125.275), 0.0, 0.0, 0, 0, Vector2(0.728155, -125.275), 0.0, 0.0, 0, 0, Vector2(1, 186.813), 0.0, 0.0, 0, 0]
point_count = 7

[sub_resource type="CurveTexture" id="CurveTexture_i4shd"]
curve = SubResource("Curve_s8t6r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_meuvs"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 9.86
angle_min = 1.07288e-05
angle_max = 1.07288e-05
gravity = Vector3(-90, 0, 0)
linear_accel_min = -19.01
linear_accel_max = 65.29
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
radial_accel_curve = SubResource("CurveTexture_i4shd")
color_ramp = SubResource("GradientTexture1D_jss3p")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5g14o"]
radius = 7.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pc2am"]
radius = 8.0

[node name="M2ReiBossBullet" type="CharacterBody2D" groups=["inimigos"]]
script = ExtResource("1_dfr8k")
bullet_velocidade = 200.0
bullet_penetracao = 1
bullet_dano = 70

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kifn7")
animation = &"snake_attack_frenzy"

[node name="GPUParticles2D" type="GPUParticles2D" parent="AnimatedSprite2D"]
position = Vector2(5, 2)
amount = 50
process_material = SubResource("ParticleProcessMaterial_meuvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5g14o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pc2am")
debug_color = Color(0.966367, 0.184722, 7.70092e-07, 0.42)

[node name="bullet_vida" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="bullet_vida" to="." method="_on_bullet_vida_timeout"]
